run: a program's own exit code is its answer, not a bleep failure (#670)
`bleep <script>` ran everything through `cli.apply`, which throws on any
non-zero exit with the whole command line in the message. For git or gpg that is
right — something went wrong and the reader needs the command to diagnose it.
For a script that exits 1 to report a problem it has already described, it means
the report is followed by the java path, two `--add-opens` flags and a
hundred-jar classpath on one line, and the reader stops looking for the two
readable lines above it. The code the script chose was replaced by bleep's flat
1 as well.

`cli.exitCode` hands the code back instead of throwing; `cli.apply` is that plus
the throw, so every existing caller keeps the diagnosis it had. `bleep run` and
`bleep <script>` — JVM, node and native alike — use the former and return
`BleepException.SubprocessExit`, which renders as one line and carries the code
through to bleep's own exit status.

Covered through `JvmRunner.Forked`, which the ITs otherwise never touch: the
harness swaps in `InProcess`, and a `System.exit` there would take the test JVM
down with it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>